--- a/2014-1/handout_linux_2014-1.tex
+++ b/2014-1/handout_linux_2014-1.tex
@@ -241,7 +241,7 @@ Na figura~\ref{fig:elementary-install} podemos ver dois ``tipos'' de instalaçã
   \label{fig:elementary-install}
 \end{figure}
 
-A seguir realizaremos o processo de particionamento, formatação e definição dos pontos de montagem para o Linux. Na imagem~\ref{fig:elementary-root} é possível ver o HD identificado como \texttt{/dev/sda} (a sua instalação possivelmente mostrará um nome diferente). Escolha \textit{free space} e clique no botão `+', isto irá criar uma nova partição. Um menu com as opções para a partição a ser criada se abrirá. Altere o tamanho da partição. Aqui usamos \texttt{20GB}, o tipo do sistema de arquivo para EXT4 e em ponto de montagem escolha `\texttt{/}'. Essa partição criada é a raiz do sistema.
+A seguir realizaremos o processo de particionamento, formatação e definição dos pontos de montagem para o Linux. Na imagem~\ref{fig:elementary-root} é possível ver o HD identificado como \texttt{/dev/sda} (a sua instalação possivelmente mostrará um nome diferente). Escolha \textit{free space} e clique no botão `+', isto irá criar uma nova partição. Um menu com as opções para a partição a ser criada se abrirá. Altere o tamanho da partição (aqui usamos \texttt{20GB}), o tipo do sistema de arquivo para EXT4 e em ponto de montagem escolha `\texttt{/}'. Essa partição criada é a raiz do sistema.
 
 \begin{figure}[h]
   \centering
