--- a/2014-1/slides_linux_2014-1.tex
+++ b/2014-1/slides_linux_2014-1.tex
@@ -46,7 +46,7 @@ style=paintings
 \usepackage{xcolor}
 \title{Introdução ao Linux}
 
-\date{Outubro, 2013}
+\date{Março, 2014}
 
 \newenvironment{vslide}{\vspace{\stretch{1}}}{\vspace{\stretch{1}}}
 
